# Ships

./: .gitignore  .gitmodules  AUTHORS  AndroidManifest.xml  LICENSES  README.md  build.gradle  gradle.properties  proguard-project.txt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html  ships.js
app/src/main/assets/openstreetmap/: extra.css
app/src/main/jni/: Android.mk  CMakeLists.txt  NativeRtlSdr.c  NativeRtlSdr.cpp  NativeRtlSdr.h  NativeRtlSdrUtils.cpp  NativeRtlSdrUtils.h  native2android.h
app/src/main/res/layout/: activity_augmented_reality_location.xml  activity_main.xml  augmented_reality_location.xml  fragment_calibrate.xml  fragment_help.xml  fragment_main.xml  fragment_map.xml  loading_dialog.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: preferences.xml  provider_paths.xml  supported_devices.xml
assets/: index.html  ships.js
assets/openstreetmap/: extra.css  readme.txt
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk  NativeRtlSdr.c  NativeRtlSdr.h  native2android.h
res/layout/: activity_main.xml  fragment_calibrate.xml  fragment_main.xml  fragment_map.xml  image_popup.xml  progress.xml  promo.xml  promo_rate_me.xml
res/menu/: main.xml
res/values/: strings.xml
res/xml/: analytics.xml  preferences.xml  supported_devices.xml
src/dk/dma/ais/message/: AisBinaryMessage.java  AisMessage1.java  AisMessage10.java  AisMessage14.java  AisMessage17.java  AisMessage18.java  AisMessage19.java  AisMessage24.java  AisMessage27.java  AisMessage3.java  AisMessage4.java  AisMessage7.java  AisPosition.java  AisUnsupportedMessageType.java  IVesselPositionMessage.java  ShipTypeColor.java
src/dk/dma/ais/packet/: AisPacket.java  AisPacketParser.java  AisPacketTags.java
src/dk/dma/ais/proprietary/: GatehouseSourceTag.java  ProprietaryFactory.java
src/dk/dma/ais/sentence/: Abk.java  Abm.java  (+5 more)
src/net/videgro/ships/: Analytics.java  SettingsUtils.java  Utils.java
(+125 files in other folders)
